--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,15 @@
 FROM python:latest
 
-ADD requirements.txt /app/
+ADD server/requirements.txt /app/
 RUN apt-get update \
     && apt-get clean \
     && apt-get update -qqq \
     && pip install --upgrade pip \ 
     && pip install -r /app/requirements.txt
 
-ADD *.py /server/
-ADD *.json /server/
+ADD server/*.py /server/
+ADD config/*.py /server/
+ADD config/*.json /
+ADD protos/*.py /server/
 
-
-WORKDIR /server/
+# WORKDIR /server/
